[gd_scene load_steps=7 format=2]

[ext_resource path="res://Asset/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://Scene/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/Weapon.gd" type="Script" id=3]
[ext_resource path="res://Asset/topdown-shooter/PNG/weapon_silencer.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "MuzzleFlash"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Reload"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_stop_reload"
} ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="EndGun" type="Position2D" parent="."]
position = Vector2( 13, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 24, 0 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Flash" type="Sprite" parent="."]
visible = false
position = Vector2( 26, 0 )
rotation = -1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Flash")
anims/MuzzleFlash = SubResource( 2 )
anims/Reload = SubResource( 3 )
